[package]
name = "jhira"
version = "0.1.2"
authors = ["Shane Osbourne <shane.osbourne8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jhira_core = { path = "../jhira_core", version = "0.1.2" }
tokio = { version = "0.2.13", features = ["full"] }
failure = "0.1.6"
futures = "0.3.4"
log = "0.4.8"
env_logger = "0.7.1"
