[package]
name = "jhira_core"
version = "0.1.0"
authors = ["Shane Osbourne <shane.osbourne8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.3"
failure = "0.1.6"
structopt = "0.3.9"
chrono = "0.4.10"
