[package]
name = "jhira_core"
version = "0.1.2"
authors = ["Shane Osbourne <shane.osbourne8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.3"
failure = "0.1.6"
structopt = "0.3.9"
chrono = "0.4.10"
reqwest = { version = "0.10.3", features = ["json"] }
serde = "1.0.104"
serde_json = "1.0.48"
serde_derive = "1.0.104"
async-trait = "0.1.24"
futures = "0.3.4"
tokio = { version = "0.2.13", features = ["full"] }
dirs = "2.0.2"
base64 = "0.11.0"
prettytable-rs = "0.8.0"
log = "0.4.8"
snailquote = "0.3.0"
ansi_term = "0.12.1"
