[package]
name = "jhira_derive"
version = "0.1.7"
authors = ["Shane Osbourne <shane.osbourne8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.34"
quote = "1.0.7"
structopt = "0.3.15"
proc-macro2 = "1.0.18"

[lib]
proc-macro = true
